Foundation for FE index, loads of fixes etc

--- a/frontend/public/assets/fonts/stylesheet.css
+++ b/frontend/public/assets/fonts/stylesheet.css
@@ -1,51 +1,12 @@
 @font-face {
-    font-family: '';
-    src: url('3afd2772a5e36f2b7a46ccef910a79c0.eot');
-    src: url('3afd2772a5e36f2b7a46ccef910a79c0.eot?#iefix') format('embedded-opentype'),
-        url('3afd2772a5e36f2b7a46ccef910a79c0.woff2') format('woff2'),
-        url('3afd2772a5e36f2b7a46ccef910a79c0.woff') format('woff'),
-        url('3afd2772a5e36f2b7a46ccef910a79c0.ttf') format('truetype'),
-        url('3afd2772a5e36f2b7a46ccef910a79c0.svg#') format('svg');
+    font-family: 'Stuffed Cannelloni';
+    src: url('StuffedCannelloni.eot');
+    src: url('StuffedCannelloni.eot?#iefix') format('embedded-opentype'),
+        url('StuffedCannelloni.woff2') format('woff2'),
+        url('StuffedCannelloni.woff') format('woff'),
+        url('StuffedCannelloni.ttf') format('truetype'),
+        url('StuffedCannelloni.svg#StuffedCannelloni') format('svg');
     font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Alliance No1';
-    src: url('AllianceNo1-ExtraBold.eot');
-    src: url('AllianceNo1-ExtraBold.eot?#iefix') format('embedded-opentype'),
-        url('AllianceNo1-ExtraBold.woff2') format('woff2'),
-        url('AllianceNo1-ExtraBold.woff') format('woff'),
-        url('AllianceNo1-ExtraBold.ttf') format('truetype'),
-        url('AllianceNo1-ExtraBold.svg#AllianceNo.1-ExtraBold') format('svg');
-    font-weight: 800;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Alliance No1';
-    src: url('AllianceNo1-Regular.eot');
-    src: url('AllianceNo1-Regular.eot?#iefix') format('embedded-opentype'),
-        url('AllianceNo1-Regular.woff2') format('woff2'),
-        url('AllianceNo1-Regular.woff') format('woff'),
-        url('AllianceNo1-Regular.ttf') format('truetype'),
-        url('AllianceNo1-Regular.svg#AllianceNo.1-Regular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Alliance No.1';
-    src: url('AllianceNo1-SemiBold.eot');
-    src: url('AllianceNo1-SemiBold.eot?#iefix') format('embedded-opentype'),
-        url('AllianceNo1-SemiBold.woff2') format('woff2'),
-        url('AllianceNo1-SemiBold.woff') format('woff'),
-        url('AllianceNo1-SemiBold.ttf') format('truetype'),
-        url('AllianceNo1-SemiBold.svg#AllianceNo.1-SemiBold') format('svg');
-    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
