--- a/frontend/public/assets/styles/components/header.scss
+++ b/frontend/public/assets/styles/components/header.scss
@@ -10,19 +10,48 @@
     li{
       list-style: none;
       display: inline-block;
-      width: 140px;
-      &:nth-child(3){
-        margin-right: 120px;
-      }
-      &:nth-child(4){
-        margin-left: 120px;
-      }
+      width: 200px;
       a{
-        color: #fff;
+        display: block;
+        color: #ccc;
         text-transform: uppercase;
         text-decoration: none;
+        font-size: 13px;
+        position: relative;
+        text-shadow: 1px 1px 0 rgba(0,0,0,0.05);
         strong{
           display: block;
+          font-size: 16px;
+          background: -webkit-linear-gradient(-90deg, #F7F7F7 0%, #cccccc 100%);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+        }
+        &:before{
+          content:"";
+          position: absolute;
+          height: 150px;
+          width: 150px;
+          left: 50%;
+          margin-left: -75px;
+          background: rgba(0,0,0,0.3);
+          z-index: -1;
+          transition: 0.6s all;
+          top: -30px;
+          //top: -100%;
+          border: 1px solid transparent;
+          opacity: 0;
+          border-radius: 50%;
+          transform: scale(0);
+        }
+        &:hover{
+          transition: 0.3s all;
+          &:before{
+            transform: scale(1,1);
+            //top: -30px;
+            opacity: 1;
+            border: 2px solid $mediumBlue;
+            transition: 0.3s all;
+          }
         }
       }
     }
@@ -34,28 +63,21 @@
     margin-left: -100px;
     position: absolute;
     background: #222;
-    border-left: 1px solid #777;
-    border-right: 1px solid #777;
-    border-bottom: 1px solid #777;
+    border-left: 1px solid $pink;
+    border-right: 1px solid $pink;
+    border-bottom: 1px solid $pink;
     top: 0;
     border-radius: 0 0 20px 20px;
     box-shadow: 1px 1px 1px 3px rgba(0,0,0,0.3);
-    opacity: 0.7;
     transition: .6s all;
     &:hover{
       opacity: 1;
       transition: 0.3s all;
       padding-top: 10px;
-      border-color: $pink;
-      img{
-        filter: grayscale(0%);
-        transition: 0.3s all;
-      }
     }
     img{
       padding: 20px;
       max-width: 100%;
-      filter: grayscale(60%);
       transition: 0.6s all;
     }
   }
