--- a/frontend/public/assets/styles/components/header.scss
+++ b/frontend/public/assets/styles/components/header.scss
@@ -2,15 +2,10 @@
   width: 100%;
   padding: 30px;
   z-index: 20;
+  text-align: center;
+  height: 160px;
   ul{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    text-align: center;
     li{
-      list-style: none;
-      display: inline-block;
-      width: 200px;
       a{
         display: block;
         color: #ccc;
