--- a/frontend/public/assets/styles/styles.scss
+++ b/frontend/public/assets/styles/styles.scss
@@ -20,6 +20,7 @@
 @import 'components/header';
 @import 'components/waves';
 @import 'components/perspectiveMockups';
+@import 'components/trustpilot';
 
 // Pages
 @import 'pages/home';
