--- a/frontend/public/assets/styles/components/trustpilot.scss
+++ b/frontend/public/assets/styles/components/trustpilot.scss
@@ -11,3 +11,48 @@
   font-family: "Segoe UI","Helvetica Neue","Helvetica","Arial","sans-serif";
   font-size: 13px;
 }
+
+.trustpilot__section{
+  /* square buttons */
+  .rec.rec-arrow {
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;
+    overflow: hidden;
+    min-width: 24px;
+    background: transparent;
+    min-height: 24px;
+    font-size: 12px;
+    line-height: 24px;
+    color: #8c8c8c;
+    &:hover{
+      color: #8c8c8c;
+      background: transparent;
+    }
+  }
+  /* hide disabled buttons */
+  .rec.rec-arrow:disabled {
+    visibility: hidden;
+  }
+}
+
+
+.faqs{
+  .faq{
+    .question{
+      opacity: 0;
+      max-height: 0;
+      overflow-y: hidden;
+      transition: 0.6s all;
+      padding-bottom: 0;
+      padding-top: 0;
+      &.show{
+        opacity: 1;
+        max-height: 1000px;
+        transition: 0.6s all;
+        padding-bottom: 0.75rem;
+        padding-top: 0.75rem;
+      }
+    }
+  }
+}
